k8s/api.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: todo-app
spec:
  selector:
    app: api
  ports:
    - port: 8080
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: todo-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api
          image: touqeerreal/go-to-do-api:latest
          ports:
            - containerPort: 8080
